@@ -1,7 +1,10 @@
 package com.smartcampus.config;
 
+import com.smartcampus.security.CustomOAuth2UserService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -11,13 +14,15 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final CustomOAuth2UserService customOAuth2UserService;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -25,11 +30,36 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .cors(Customizer.withDefaults())
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/public/**").permitAll()
+                // ---- PUBLIC endpoints (no login needed) ----
+                .requestMatchers("/api/public/**", "/actuator/health/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/facilities/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/facilities/search").permitAll()
+
+                // ---- ADMIN only endpoints ----
+                .requestMatchers(HttpMethod.GET, "/api/users").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH, "/api/users/*/role").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/facilities").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/facilities/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/facilities/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH, "/api/facilities/*/status").hasRole("ADMIN")
                 .requestMatchers("/api/bookings/*/status").hasRole("ADMIN")
                 .anyRequest().authenticated()
             )
-            .oauth2Login(Customizer.withDefaults());
+            .oauth2Login(oauth2 -> oauth2
+                .userInfoEndpoint(userInfo -> userInfo
+                    .userService(customOAuth2UserService)
+                )
+                // After successful Google login, redirect to frontend profile page
+                .defaultSuccessUrl("http://localhost:5173/profile", true)
+                .failureUrl("http://localhost:5173/login?error=true")
+            )
+            .logout(logout -> logout
+                .logoutUrl("/api/auth/logout")
+                .logoutSuccessUrl("http://localhost:5173/login")
+                .invalidateHttpSession(true)
+                .deleteCookies("JSESSIONID")
+                .permitAll()
+            );
 
         return http.build();
     }
@@ -37,10 +67,14 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000"
+        ));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
